JavaProject/src/info3/parser/javacc/projet/langageC/test/pass/test14.c
ALGORITHM(test14){
	int a;
	float b;
	char c;
}
