JavaProject/src/info3/parser/javacc/projet/langageC/test/fail/test15.c
ALGORITHM(test15){
	int i
}
